refactor: Remove single argument constructor for ValidationResult